// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Sidebar Annidata 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-line-left-side sidebar-wrapper"
    >
      <div
        className="sidebar-linklist-wrapper"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="right-icon size list-item"
                onClick={[Function]}
              >
                <span>
                  Link list 1 
                </span>
                <svg
                  className="icon right icon-primary"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
            </li>
            <div
              className="collapse"
              style={Object {}}
            >
              <ul
                className="link-sublist"
              >
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 4 
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 5 
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 6 
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <li>
              <a
                className="right-icon size list-item"
                onClick={[Function]}
              >
                <span>
                  Link list 2 
                </span>
                <svg
                  className="icon right icon-primary"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
            </li>
            <div
              className="collapse"
              style={Object {}}
            >
              <ul
                className="link-sublist"
              >
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 7 
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 8 
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 9 
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <li>
              <a
                className="right-icon size list-item"
                onClick={[Function]}
              >
                <span>
                  Link list 3 
                </span>
                <svg
                  className="icon right icon-primary"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6 15.4L6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                  />
                </svg>
              </a>
            </li>
            <div
              className="collapse"
              style={Object {}}
            >
              <ul
                className="link-sublist"
              >
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 10 
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 11 
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 12 
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <div
              className="linklist-secondary sidebar-linklist-wrapper"
            />
            <li>
              <a
                className="list-item"
              >
                <span>
                  Secondary item
                </span>
              </a>
            </li>
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Secondary item active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Secondary item disabled
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Sidebar Sidebar versione scura 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="theme-dark sidebar-wrapper"
    >
      <div
        className="sidebar-linklist-wrapper"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                HEADER
              </h3>
            </li>
            <li>
              <a
                className="active list-item"
                medium={true}
              >
                <span>
                  Link list active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                medium={true}
                onClick={[Function]}
              >
                <span>
                  Link list disabled
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="linklist-secondary sidebar-linklist-wrapper"
        />
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Secondary item
                </span>
              </a>
            </li>
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Secondary item active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Secondary item disabled
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Sidebar.Basic Sidebar Basic Sidebar 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sidebar-wrapper"
    >
      <div
        className="sidebar-linklist-wrapper"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                HEADER
              </h3>
            </li>
            <li>
              <a
                className="active list-item"
                medium={true}
              >
                <span>
                  Link list active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                medium={true}
                onClick={[Function]}
              >
                <span>
                  Link list disabled
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="linklist-secondary sidebar-linklist-wrapper"
        />
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Secondary item
                </span>
              </a>
            </li>
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Secondary item active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Secondary item disabled
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Sidebar.Basic Sidebar Con icona 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sidebar-wrapper"
    >
      <div
        className="sidebar-linklist-wrapper"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                HEADER
              </h3>
            </li>
            <li>
              <a
                className="left-icon active list-item"
                medium={true}
              >
                <svg
                  className="icon left icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
                <span>
                  Link list active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                medium={true}
                onClick={[Function]}
              >
                <svg
                  className="icon left icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
                <span>
                  Link list disabled
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <svg
                  className="icon left icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
                <span>
                  Link list
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <svg
                  className="icon left icon-sm sm"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
                <span>
                  Link list
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="linklist-secondary sidebar-linklist-wrapper"
        />
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Secondary item
                </span>
              </a>
            </li>
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Secondary item active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Secondary item disabled
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Sidebar.Basic Sidebar Con linea a destra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-line-right-side sidebar-wrapper"
    >
      <div
        className="sidebar-linklist-wrapper"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                HEADER
              </h3>
            </li>
            <li>
              <a
                className="active list-item"
                medium={true}
              >
                <span>
                  Link list active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                medium={true}
                onClick={[Function]}
              >
                <span>
                  Link list disabled
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="linklist-secondary sidebar-linklist-wrapper"
        />
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Secondary item
                </span>
              </a>
            </li>
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Secondary item active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Secondary item disabled
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Sidebar.Basic Sidebar Con linea a sinistra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="it-line-left-side sidebar-wrapper"
    >
      <div
        className="sidebar-linklist-wrapper"
      >
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <h3
                className="header list-item"
              >
                HEADER
              </h3>
            </li>
            <li>
              <a
                className="active list-item"
                medium={true}
              >
                <span>
                  Link list active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                medium={true}
                onClick={[Function]}
              >
                <span>
                  Link list disabled
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
            <li>
              <a
                className="list-item"
                medium={true}
              >
                <span>
                  Link list
                </span>
              </a>
            </li>
          </ul>
        </div>
        <div
          className="linklist-secondary sidebar-linklist-wrapper"
        />
        <div
          className="link-list-wrapper"
        >
          <ul
            className="link-list"
          >
            <li>
              <a
                className="list-item"
              >
                <span>
                  Secondary item
                </span>
              </a>
            </li>
            <li>
              <a
                className="active list-item"
              >
                <span>
                  Secondary item active
                </span>
              </a>
            </li>
            <li>
              <a
                className="disabled list-item"
                onClick={[Function]}
              >
                <span>
                  Secondary item disabled
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
